--- a/style.css
+++ b/style.css
@@ -12,3 +12,31 @@ body {
   overflow: hidden;
   margin: 0;
 }
+
+.container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: #333;
+}
+
+.split {
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.split.left {
+  left: 0;
+  background: url(/images/ps.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.split.right {
+  right: 0;
+  background: url(/images/xbox.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
