--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 /* Importing google font */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
+:root {
+  --left-bg-color: rgba(87, 84, 236, 0.7);
+  --right-bg-color: rgba(43, 43, 43, 0.8);
+}
+
 /* Setting universal selector to apply this to all the content */
 * {
   box-sizing: border-box;
@@ -34,9 +39,25 @@ body {
   background-size: cover;
 }
 
+.split.left::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--left-bg-color);
+}
+
 .split.right {
   right: 0;
   background: url(/images/xbox.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.split.right::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--right-bg-color);
 }
