--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 /* Importing google font */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
+/* Custom property variables */
 :root {
   --left-bg-color: rgba(87, 84, 236, 0.7);
   --right-bg-color: rgba(43, 43, 43, 0.8);
   --left--btn-hover-color: rgba(87, 84, 236, 1);
   --right--btn-hover-color: rgba(28, 122, 28, 1);
+  --hover-width: 75%;
+  --other-width: 25%;
 }
 
 /* Setting universal selector to apply this to all the content */
@@ -30,6 +33,7 @@ H1 {
   white-space: nowrap;
 }
 
+/* Button styling */
 .btn {
   position: absolute;
   display: flex;
@@ -58,6 +62,7 @@ H1 {
   border-color: var(--right--btn-hover-color);
 }
 
+/* Container styling */
 .container {
   position: relative;
   width: 100%;
@@ -100,4 +105,21 @@ H1 {
   width: 100%;
   height: 100%;
   background-color: var(--right-bg-color);
+}
+
+/* Container hover styling */
+.hover-left .left {
+  width: var(--hover-width);
+}
+
+.hover-left .right {
+  width: var(--other-width);
+}
+
+.hover-right .right {
+  width: var(--hover-width);
+}
+
+.hover-right .left {
+  width: var(--other-width);
 }
