--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
   --right--btn-hover-color: rgba(28, 122, 28, 1);
   --hover-width: 75%;
   --other-width: 25%;
+  --speed: 1000ms;
 }
 
 /* Setting universal selector to apply this to all the content */
@@ -105,6 +106,13 @@ H1 {
   width: 100%;
   height: 100%;
   background-color: var(--right-bg-color);
+}
+
+.split.right,
+.split.left,
+.split.right::before,
+split.left::before {
+  transition: all var(--speed) ease-in-out;
 }
 
 /* Container hover styling */
